--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -3,4 +3,5 @@ aTag, aTag:visited, aTag:focus, aTag:active
   @extend .a !optional;
   text-decoration: none;
   color: inherit;
+  border-bottom: 4px solid;
  }
