--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,9 +1,9 @@
 .context {
     background-color: transparent;
     padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /* border: 1px solid #ddd; */
+    /* border-radius: 10px; */
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
   }
   
   .context h2 {
@@ -27,7 +27,7 @@
     border-bottom: none;
   }
   
-  .context span {
+  .context code {
     font-weight: bold;
     color: #12c0ff;
   }
