--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,6 +1,12 @@
+@font-face {
+  font-family: myFirstFont;
+  src: url(FiraCode.ttf);
+}
+
 .context {
     background-color: transparent;
     padding: 20px;
+    font-family: myFirstFont, sans-serif 
     /* border: 1px solid #ddd; */
     /* border-radius: 10px; */
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
