--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: myFirstFont;
-  src: local("_assets/fonts/FiraCode.ttf");
+  src: url("_assets/fonts/FiraCode.ttf");
 }
 
 .context {
