--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: myFirstFont;
-  src: url("_assets/fonts/FiraCode.ttf");
+  src: url("https://github.com/ahjdev/ahjdev.github.io/blob/7e90120ed68c0a0fc05ba51ccedeb70b0afb4633/_assets/fonts/FiraCode.ttf");
 }
 
 .context {
