--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: myFirstFont;
-  src: local("https://github.com/ahjdev/ahjdev.github.io/raw/main/_assets/fonts/FiraCode.ttf");
+  src: local("https://github.com/ahjdev/ahjdev.github.io/raw/main/_assets/fonts/FiraCode.ttf"), "Arial";
 }
 
 .context {
