--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: myFirstFont;
-  src: local("https://github.com/ahjdev/ahjdev.github.io/tree/main/assets%20/fonts"), "Arial";
+  src: local("FiraCode"), "Arial";
 }
 
 .context {
