--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: myFirstFont;
-  src: asset_url("fonts/FiraCode.ttf"), "Arial";
+  src: asset_path("fonts/FiraCode.ttf"), "Arial";
 }
 
 .context {
