--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,12 +1,12 @@
 @font-face {
   font-family: myFirstFont;
-  src: url(asset_path("fonts/FiraCode.ttf"));
+  src: asset_url("fonts/FiraCode.ttf");
 }
 
 .context {
     background-color: transparent;
     padding: 20px;
-    font-family: myFirstFont 
+    font-family: myFirstFont;
     /* border: 1px solid #ddd; */
     /* border-radius: 10px; */
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
