--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -4,7 +4,7 @@
 }
 
 .context {
-    background-color: transparent;
+    // background-color: transparent;
     padding: 20px;
     font-family: myFirstFont;
     /* border: 1px solid #ddd; */
