--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -4,9 +4,9 @@
 }
 
 .context {
-    // background-color: transparent;
+    /* background-color: transparent; */
     padding: 20px;
-    font-family: myFirstFont;
+    // font-family: myFirstFont;
     /* border: 1px solid #ddd; */
     /* border-radius: 10px; */
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
