--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -35,7 +35,7 @@
     color: #12c0ff;
   }
   .context hr {
-  width: 20px; /* change the width to 400px */
+  length: 100px; /* change the width to 400px */
 }
   .context br {
     display: block;
