--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -35,8 +35,8 @@
     color: #12c0ff;
   }
   .context hr {
-  length: 100px; /* change the width to 400px */
-}
+      border-radius: 2px;
+  }
   .context br {
     display: block;
     margin-bottom: 10px;
