--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -35,7 +35,7 @@
     color: #12c0ff;
   }
   .context hr {
-      border-radius: 5px;
+      border-width: huge;
   }
   .context br {
     display: block;
