--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -30,10 +30,10 @@
     border-bottom: none;
 }
 
-.context span {
-    font-weight: bold;
-    color: #12c0ff;
-}
+// .context span {
+//     font-weight: bold;
+//     color: #12c0ff;
+// }
 .context hr {
   border-width: huge;
 }
