--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -8,6 +8,9 @@
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
 }
 
+.context a {
+    color: inherit;
+}
 .context h2 {
     margin-top: 0;
     font-weight: bold;
