--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -35,7 +35,7 @@
     font-family: Fira Code;
 }
 .context span {
-    font-weight: bold;
+    // font-weight: bold;
 }
 .context br {
     display: block;
