--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -37,6 +37,9 @@
 .context span {
     // font-weight: bold;
 }
+.context span2 {
+    font-weight: bold;
+}
 .context br {
     display: block;
     margin-bottom: 10px;
