--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -4,8 +4,8 @@
     /* background-color: transparent; */
     padding: 20px;
     /* border: 1px solid #ddd; */
-    /* border-radius: 10px; */
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .context a {
@@ -17,11 +17,11 @@
     color: #ffffff;
 }
 
-.context ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
+// .context ul {
+    // list-style: none;
+    // padding: 0;
+    // margin: 0;
+// }
 
 .context li {
     padding: 10px;
@@ -34,9 +34,6 @@
 .context pre {
     font-family: Fira Code;
 }
-.context span {
-    // font-weight: bold;
-}
 .context span2 {
     font-weight: bold;
 }
@@ -44,7 +41,6 @@
     display: block;
     margin-bottom: 10px;
 }
-
 .whitecolor {
   color: hwb(0 100% 0%);
 }
