--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -37,6 +37,9 @@
 .context span2 {
     font-weight: bold;
 }
+.context span3 {
+    font-weight: 350px;
+}
 .context br {
     display: block;
     margin-bottom: 10px;
