--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,1 +1,3 @@
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300..700&family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
+<head>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300..700&family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
+</head>
