--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -80,8 +80,8 @@ body {
 }
 
 details.styled {
-	// border: 1px solid #121212;
-	// border-radius:4px;
+	border: 1px solid #121212;
+	border-radius:4px;
 	// margin-bottom: 1em;
 	transition: all 1.5s ease-in-out;
 	overflow: hidden;
