--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -80,9 +80,20 @@ body {
 }
 
 details.styled {
-	border: 1px solid #121212;
-	border-radius:4px;
-	// margin-bottom: 1em;
 	transition: all 1.5s ease-in-out;
 	overflow: hidden;
+}
+
+details[open].styled {
+	max-height: 500px;
+  	transition: all 1.5s ease-in-out;
+}
+
+details.styled summary {
+	outline: none;
+	cursor: pointer;
+}
+
+details[open].styled summary {
+	padding-bottom: 1em;
 }
