--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -85,7 +85,7 @@ details.styled {
 	// border-radius:4px;
 	// margin-bottom: 1em;
 	transition: all 1.5s ease-in-out;
-	// max-height: 20px;
+	max-height: 40px;
 	overflow: hidden;
 }
 
