--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -86,6 +86,7 @@ details.styled {
 	// margin-bottom: 1em;
 	transition: all 0.5s ease-in-out;
 	// max-height: 40px;
+	max-height: 100%;
 	overflow: hidden;
 }
 
