--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -85,14 +85,13 @@ details.styled {
 	// border-radius:4px;
 	// margin-bottom: 1em;
 	transition: all 0.5s ease-in-out;
-	// max-height: 40px;
+	max-height: 40px;
 	max-height: 100%;
 	overflow: hidden;
 }
 
 details[open].styled {
-	max-height: 100%;
-	// max-height: 500px;
+	max-height: 500px;
 }
 
 details.styled summary {
