--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -87,9 +87,9 @@ ul, summary {
 }
 
 details.styled {
-  padding: 1em;
-  border: 1px solid #121212;
-  border-radius: 3px;
+  // padding: 1em;
+  // border: 1px solid #121212;
+  // border-radius: 3px;
 }
 
 details[open].styled {
