--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -40,8 +40,8 @@ body {
 }
 
 .context pre {
-  display: inline-block;
-  font-family: Fira Code;
+    font-family: Fira Code;
+    margin-bottom: 10px;
 }
 
 .context span2 {
